# Email-Autoresponder

./: README.md  create_package.py  main.py  pyproject.toml  requirements.txt  setup.py
chrome_extension/: README.md  content.js  manifest.json  popup.html  popup.js  styles.css
config/: __init__.py  settings.py
images/: agent_output.docx
my_agent/: agent.py
src/: __init__.py
src/agents/: __init__.py  email_agent.py
src/mcp/: __init__.py  smtp_server.py
src/models/: __init__.py  email.py
src/services/: __init__.py  gemini_service.py  gmail_service.py  rag_service.py  slack_service.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  email_parser.py  logger.py
tests/: test_email_agent.py
