[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-agent"
version = "1.0.0"
description = "AI-powered Email Agent with Gmail integration, RAG-based duplicate detection, and auto-response capabilities"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["email", "ai", "agent", "gemini", "gmail", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-genai>=0.2.0",
    "google-adk>=0.1.0",
    "google-generativeai>=0.3.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/email-agent"
Documentation = "https://github.com/yourusername/email-agent/blob/main/README.md"
Repository = "https://github.com/yourusername/email-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
